--- a/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
+++ b/Beerig_App/app/src/main/res/layout/activity_party_mode.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/party_time_background"
     tools:context=".PartyModeActivity">
 
     <ImageView
