--- a/Beerig_App/app/src/main/res/layout/drink_dialog.xml
+++ b/Beerig_App/app/src/main/res/layout/drink_dialog.xml
@@ -8,30 +8,43 @@
     android:layout_height="match_parent"
     android:background="@drawable/dialog_background">
 
-    <TextView
-        android:id="@+id/drink_description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:paddingTop="160dp"
-        android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"
-        android:textSize="32sp"
-        android:textColor="#FFFFFF"
-        android:gravity="center" />
+    <!-- Scroll View is used in case drink description is too long -->
+    <ScrollView
+        android:id="@+id/dialog_scroll"
 
-    <!-- Im thinking this needs to go inside of a scroll view in case it's long -->
-    <TextView
-        android:id="@+id/drink_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="72dp"
-        android:fontFamily="@font/sign_painter"
-        android:textColor="#FC8E85"
-        android:textSize="56sp" />
+        android:layout_centerHorizontal="true">
+            <TextView
+                android:id="@+id/drink_description"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:paddingTop="160dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                android:textSize="32sp"
+                android:textColor="#FFFFFF"
+                android:gravity="center"
+                />
+    </ScrollView>
+
+
+        <TextView
+            android:id="@+id/drink_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="72dp"
+            android:fontFamily="@font/sign_painter"
+            android:textColor="#FC8E85"
+            android:textSize="56sp"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true" />
+
+
 
     <LinearLayout
         android:layout_width="wrap_content"
